removed Pomodoro tab and refactored name change

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img src="images/task.png">
                     <span>FocusFlow</span>
                 </div>
-                <h2>Join F</h2>
+                <h2>Join FocusFlow</h2>
                 <label for="registerUsername">Username</label>
                 <input type="text" id="registerUsername" placeholder="Choose a username" required />
 
